--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@
         </nav>
         <ul class="contacts">
           <li class="mail">
+            <svg class="icon"><use href="./images/icon.svg#icon-envelop"></use></svg>
             <a class="infodevstudio" href="info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="mail">
+            <svg class="icon icon-envelop"><use href="./images/icon.svg#icon-mobile"></use></svg>
             <a class="fone" href="+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
@@ -54,13 +56,32 @@
       </section>
       <section class="visually">
         <div class="container">
+          <ul class="icon-styles">
+            <li class="icon-styles-svg">
+              <svg width="64px"height="64px">
+                <use class="icon-svg-title" href="./images/icon.svg#icon-antenna"></use>
+              </svg>
+            </li>
+            <li class="icon-styles-svg">
+              <svg width="64px"height="64px">
+                <use class="icon-svg-title" href="./images/icon.svg#icon-clock"></use>
+              </svg>
+            </li>
+            <li class="icon-styles-svg">
+              <svg width="64px"height="64px">
+                <use class="icon-svg-title" href="./images/icon.svg#icon-diagram"></use>
+              </svg>
+            </li>
+            <li class="icon-styles-svg">
+              <svg width="64px"height="64px">
+                <use class="icon-svg-title" href="./images/icon.svg#icon-astronaut"></use>
+              </svg>
+            </li>
+          </ul>
           <h2 class="visually-hidden">Our principles</h2>
           <ul class="card-set">
             <!--Strategy-->
             <li class="straegy">
-              <svg width="230" height="30">
-                <use href="./images/sprite.svg#icon-twitter-1"></use>
-              </svg>
               <h3 class="text-strategy">Strategy</h3>
               <p class="straegy-title">
                 Our goal is to identify the business problem to walk away with
@@ -139,6 +160,30 @@
               />
               <h3 class="text-foto">Mark Guerrero</h3>
               <p class="text-pr">Product Designer</p>
+              <div class="wardrobe-icon">
+                <ul class="wardrobe-list">
+                  <li class="wardrobe-title-icon">
+                    <svg class="wardrobe-icon-svg" wigth="16" height="16">
+                      <use href="./images/icon.svg#icon-instagram"></use>
+                    </svg>
+                  </li>
+                  <li class="wardrobe-title-icon">
+                    <svg class="wardrobe-icon-svg" wigth="16" height="16">
+                    <use href="./images/icon.svg#icon-twitter"></use>
+                  </svg>
+                </li>
+                  <li class="wardrobe-title-icon">
+                    <svg class="wardrobe-icon-svg" wigth="16" height="16">
+                      <use href="./images/icon.svg#icon-facebook"></use>
+                    </svg>
+                  </li>
+                  <li class="wardrobe-title-icon">
+                    <svg class="wardrobe-icon-svg" wigth="16" height="16">
+                      <use href="./images/icon.svg#icon-linkedin"></use>
+                    </svg>
+                  </li>
+                </ul>
+              </div>
             </li>
             <!--Team Card2-->
             <li class="item">
@@ -151,6 +196,30 @@
               />
               <h3 class="text-foto">Tom Ford</h3>
               <p class="text-pr">Frontend Developer</p>
+              <div class="wardrobe-icon">
+                <ul class="wardrobe-list">
+                  <li class="wardrobe-title-icon">
+                    <svg class="wardrobe-icon-svg" wigth="16" height="16">
+                      <use href="./images/icon.svg#icon-instagram"></use>
+                    </svg>
+                  </li>
+                  <li class="wardrobe-title-icon">
+                    <svg class="wardrobe-icon-svg" wigth="16" height="16">
+                    <use href="./images/icon.svg#icon-twitter"></use>
+                  </svg>
+                </li>
+                  <li class="wardrobe-title-icon">
+                    <svg class="wardrobe-icon-svg" wigth="16" height="16">
+                      <use href="./images/icon.svg#icon-facebook"></use>
+                    </svg>
+                  </li>
+                  <li class="wardrobe-title-icon">
+                    <svg class="wardrobe-icon-svg" wigth="16" height="16">
+                      <use href="./images/icon.svg#icon-linkedin"></use>
+                    </svg>
+                  </li>
+                </ul>
+              </div>
             </li>
             <!--Team Card3-->
             <li class="item">
@@ -163,6 +232,30 @@
               />
               <h3 class="text-foto">Camila Garcia</h3>
               <p class="text-pr">Marketing</p>
+              <div class="wardrobe-icon">
+                <ul class="wardrobe-list">
+                  <li class="wardrobe-title-icon">
+                    <svg class="wardrobe-icon-svg" wigth="16" height="16">
+                      <use href="./images/icon.svg#icon-instagram"></use>
+                    </svg>
+                  </li>
+                  <li class="wardrobe-title-icon">
+                    <svg class="wardrobe-icon-svg" wigth="16" height="16">
+                    <use href="./images/icon.svg#icon-twitter"></use>
+                  </svg>
+                </li>
+                  <li class="wardrobe-title-icon">
+                    <svg class="wardrobe-icon-svg" wigth="16" height="16">
+                      <use href="./images/icon.svg#icon-facebook"></use>
+                    </svg>
+                  </li>
+                  <li class="wardrobe-title-icon">
+                    <svg class="wardrobe-icon-svg" wigth="16" height="16">
+                      <use href="./images/icon.svg#icon-linkedin"></use>
+                    </svg>
+                  </li>
+                </ul>
+              </div>  
             </li>
             <!--Team Card4-->
             <li class="item">
@@ -175,34 +268,82 @@
               />
               <h3 class="text-foto">Daniel Wilson</h3>
               <p class="text-pr">UI Designer</p>
+              <div class="wardrobe-icon">
+                <ul class="wardrobe-list">
+                  <li class="wardrobe-title-icon">
+                    <svg class="wardrobe-icon-svg" wigth="16" height="16">
+                      <use href="./images/icon.svg#icon-instagram"></use>
+                    </svg>
+                  </li>
+                  <li class="wardrobe-title-icon">
+                    <svg class="wardrobe-icon-svg" wigth="16" height="16">
+                    <use href="./images/icon.svg#icon-twitter"></use>
+                  </svg>
+                </li>
+                  <li class="wardrobe-title-icon">
+                    <svg class="wardrobe-icon-svg" wigth="16" height="16">
+                      <use href="./images/icon.svg#icon-facebook"></use>
+                    </svg>
+                  </li>
+                  <li class="wardrobe-title-icon">
+                    <svg class="wardrobe-icon-svg" wigth="16" height="16">
+                      <use href="./images/icon.svg#icon-linkedin"></use>
+                    </svg>
+                  </li>
+                </ul>
+              </div>
             </li>
           </ul>
         </div>
       </section>
     <section>
       <div class="container">
-        <h2>Customers</h2>
-        <ul class="Customers">
-          <li>
-            <svg>
-              <use href="./images/sprite.svg#icon-Logo"> 
-               
+       <h2 class="title-icon">Customers</h2>
+        <ul class="customers">
+          <li class="customers-panei-icon">
+            <svg wigth="104" height="56">
+              <use href="./images/icon.svg#icon-Logo">
               </use>
             </svg>
           </li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li class="customers-panei-icon">
+            <svg wigth="104" height="56">
+            <use href="./images/icon.svg#icon-Logo-1">
+            </use>
+          </svg>
+          </li>
+          <li class="customers-panei-icon">
+            <svg wigth="104" height="56">
+              <use href="./images/icon.svg#icon-Logo-2">
+              </use>
+            </svg>
+          </li>
+          <li class="customers-panei-icon">
+            <svg wigth="104" height="56">
+              <use href="./images/icon.svg#icon-Logo-3">
+              </use>
+            </svg>
+          </li>
+          <li class="customers-panei-icon">
+            <svg wigth="104" height="56">
+              <use href="./images/icon.svg#icon-Logo-4">
+              </use>
+            </svg>
+          </li>
+          <li class="customers-panei-icon">
+            <svg  wigth="104" height="56">
+              <use href="./images/icon.svg#icon-Logo-5">
+            </use>
+            </svg>
+          </li>
         </ul>
       </div>
     </section>
         
     </main>
     <footer class="lowerpart">
-      <div class="container">
+      <div class="container-footer">
+        <div class="footer-block">
         <a class="lowerpart-block" href="./index.html"
           ><span class="lowerpart-item">WEB</span>STUDIO</a
         >
@@ -210,6 +351,32 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+      </div>
+        <div class="footer-icon">
+          <h2 class="footer-title">Social media</h2>
+          <ul class="footer-list">
+            <li class="footer-title-icon">
+              <svg class="footer-icon-svg" wigth="16" height="16">
+                <use href="./images/icon.svg#icon-instagram"></use>
+              </svg>
+            </li>
+            <li class="footer-title-icon">
+              <svg class="wardrobe-icon-svg" wigth="16" height="16">
+              <use href="./images/icon.svg#icon-twitter"></use>
+            </svg>
+          </li>
+            <li class="footer-title-icon">
+              <svg class="wardrobe-icon-svg" wigth="16" height="16">
+                <use href="./images/icon.svg#icon-facebook"></use>
+              </svg>
+            </li>
+            <li class="footer-title-icon">
+              <svg class="wardrobe-icon-svg" wigth="16" height="16">
+                <use href="./images/icon.svg#icon-linkedin"></use>
+              </svg>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
