--- a/portfolio.html
+++ b/portfolio.html
@@ -29,11 +29,13 @@
         </nav>
         <ul class="contacts">
           <li class="mail">
+            <svg class="icon"><use href="./images/icon.svg#icon-envelop"></use></svg>
             <a class="infodevstudio" href="info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="mail">
+            <svg class="icon icon-envelop"><use href="./images/icon.svg#icon-mobile"></use></svg>
             <a class="fone" href="+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
@@ -183,15 +185,42 @@
       </section>
     </main>
     <footer class="lowerpart">
-      <div class="container">
-      <a class="lowerpart-block" href="./index.html"
-        ><span class="lowerpart-item">WEB</span>STUDIO</a
-      >
-      <p class="lowerpart-title">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
-    </div>
+      <div class="container-footer">
+        <div class="footer-block">
+        <a class="lowerpart-block" href="./index.html"
+          ><span class="lowerpart-item">WEB</span>STUDIO</a
+        >
+        <p class="lowerpart-title">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
+        <div class="footer-icon">
+          <h2 class="footer-title">Social media</h2>
+          <ul class="footer-list">
+            <li class="footer-title-icon">
+              <svg class="footer-icon-svg" wigth="16" height="16">
+                <use href="./images/icon.svg#icon-instagram"></use>
+              </svg>
+            </li>
+            <li class="footer-title-icon">
+              <svg class="wardrobe-icon-svg" wigth="16" height="16">
+              <use href="./images/icon.svg#icon-twitter"></use>
+            </svg>
+          </li>
+            <li class="footer-title-icon">
+              <svg class="wardrobe-icon-svg" wigth="16" height="16">
+                <use href="./images/icon.svg#icon-facebook"></use>
+              </svg>
+            </li>
+            <li class="footer-title-icon">
+              <svg class="wardrobe-icon-svg" wigth="16" height="16">
+                <use href="./images/icon.svg#icon-linkedin"></use>
+              </svg>
+            </li>
+          </ul>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
