update index html

--- a/portfolio.html
+++ b/portfolio.html
@@ -185,7 +185,7 @@
       </section>
     </main>
     <footer class="lowerpart">
-      <div class="container-footer">
+      <div class="container container-footer">
         <div class="footer-block">
         <a class="lowerpart-block" href="./index.html"
           ><span class="lowerpart-item">WEB</span>STUDIO</a
@@ -199,24 +199,32 @@
           <h2 class="footer-title">Social media</h2>
           <ul class="footer-list">
             <li class="footer-title-icon">
+              <a class="wardrobe-icon-svg-a" href="#">
               <svg class="footer-icon-svg" wigth="16" height="16">
                 <use href="./images/icon.svg#icon-instagram"></use>
               </svg>
+              </a>
             </li>
             <li class="footer-title-icon">
+              <a class="wardrobe-icon-svg-a" href="#">
               <svg class="wardrobe-icon-svg" wigth="16" height="16">
               <use href="./images/icon.svg#icon-twitter"></use>
             </svg>
+              </a>
           </li>
             <li class="footer-title-icon">
+              <a class="wardrobe-icon-svg-a" href="#">
               <svg class="wardrobe-icon-svg" wigth="16" height="16">
                 <use href="./images/icon.svg#icon-facebook"></use>
               </svg>
+              </a>
             </li>
             <li class="footer-title-icon">
+              <a class="wardrobe-icon-svg-a" href="#">
               <svg class="wardrobe-icon-svg" wigth="16" height="16">
                 <use href="./images/icon.svg#icon-linkedin"></use>
               </svg>
+              </a>
             </li>
           </ul>
         </div>
